--- a/test2/test.css
+++ b/test2/test.css
@@ -209,7 +209,7 @@ transform: rotate(270deg);
 
 .container{
     display: flex;
-    margin-left: 3vw;
+    margin-left: 5vw;
     margin-right: 4vw;
     margin-top: -10vw;
   }
@@ -223,7 +223,7 @@ transform: rotate(270deg);
   ============== */
   .btn-container{
     display: flex;
-    margin-left: 4vw;
+    margin-left: 5vw;
     margin-right: 3vw;
     margin-top: 2vh;
   }
@@ -235,7 +235,7 @@ transform: rotate(270deg);
   
   .content{
     border: 2px solid black;
-    padding: 0px 5px 0px 5px;
+    padding: 0px px 0px 5px;
     border-radius: 5px;
     cursor: pointer;
     display: inline-block;
@@ -255,8 +255,8 @@ transform: rotate(270deg);
   ================= */
   .name-container{
     display: flex;
-    margin-left: 4vw;
-    margin-right: 3vw;
+    margin-left: 5vw;
+    margin-right: 4vw;
     margin-top: 34vh;
   }
   
@@ -268,11 +268,11 @@ transform: rotate(270deg);
   
   .name-content{
     border: 2px solid white;
-    border-radius: 8px;
+    border-radius: 20px;
     display: inline-block;
     width: 25%;
     text-align: center;
     background-color: white;
-    padding: 5px 10px 5px 10px;
+    padding: 5px 40px 5px 10px;
   }
   
